website/versioned_docs/version-2.0.0rc3/start/installation.mdx
---
sidebar_position: 0
description: 通过脚手架、PyPI 或 GitHub 安装 NoneBot2

options:
  menu:
    weight: 10
    category: guide
---

import Asciinema from "@site/src/components/Asciinema";

# 安装 NoneBot2

:::warning 注意
请确保你的 Python 版本 >= 3.8。
:::

:::warning 注意
请在安装 NoneBot v2 之前卸载 NoneBot v1

```bash
pip uninstall nonebot
```

:::

## 通过脚手架安装（推荐）

1. 安装 [pipx](https://pypa.github.io/pipx/)

   ```bash
   python -m pip install --user pipx
   python -m pipx ensurepath
   ```

2. 安装脚手架

   ```bash
   pipx install nb-cli
   ```

安装完成后，你可以在命令行使用 `nb` 命令来使用脚手架。如果出现无法找到命令的情况（例如：`Command not found`），请参考 [pipx 文档](https://pypa.github.io/pipx/) 检查你的环境变量。

<Asciinema
  url="https://asciinema.org/a/464654.cast"
  options={{ theme: "monokai", poster: "npt:2.8" }}
/>

:::important 提示
nb-cli 的使用方法详见[使用脚手架](./nb-cli.md)
:::

## 不使用脚手架（纯净安装）

如果你不想使用脚手架，可以直接安装 NoneBot2，并自行完成开发配置。

```bash
pip install 'nonebot2[fastapi]'
# 也可以通过 Poetry 安装
poetry add 'nonebot2[fastapi]'
```

## 从 GitHub 安装

如果你需要使用最新的（可能**尚未发布**的）特性，可以直接从 GitHub 仓库安装:

:::warning 注意
直接从 GitHub 仓库中安装意味着你将使用最新提交的代码，它们并没有进行充分的稳定性测试

在任何情况下请不要将其应用于生产环境!
:::

```bash title="Install From GitHub"
# master分支
poetry add git+https://github.com/nonebot/nonebot2.git#master
# dev分支
poetry add git+https://github.com/nonebot/nonebot2.git#dev
```

或者在克隆 Git 仓库后手动安装:

```bash
git clone https://github.com/nonebot/nonebot2.git
cd nonebot2
poetry install --no-dev  # 推荐
pip install .  # 不推荐
```
